--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,7 +48,7 @@ jobs:
           EOT
       - name: Release to GitHub Pages
         env:
-          USE_SSH: true
+          USE_SSH: false
           GIT_USER: git
         run: |
           git config --global user.email "actions@gihub.com"
