--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,10 +48,10 @@ jobs:
           EOT
       - name: Release to GitHub Pages
         env:
-          USE_SSH: false
+          USE_SSH: true
           GIT_USER: git
         run: |
-          git config --global user.email "actions@gihub.com"
+          git config --global user.email "actions@github.com"
           git config --global user.name "gh-actions"
           if [ -e yarn.lock ]; then
           yarn install --frozen-lockfile
