--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Release to GitHub Pages
         env:
           USE_SSH: true
-          GIT_USER: git
+          GIT_USER: Orama-Interactive
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "gh-actions"
