--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pages adn Generate offline PDF
+name: Deploy to GitHub Pages and Generate offline PDF
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
 
 jobs:
   deploy:
-    name: Deploy to GitHub Pages adn Generate offline PDF
+    name: Deploy to GitHub Pages and Generate offline PDF
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
