--- a/.github/workflows/generatePDF.yml
+++ b/.github/workflows/generatePDF.yml
@@ -19,6 +19,8 @@ jobs:
         uses: actions/checkout@v4
 
       - run: |
+           sudo apt-get update
+           sudo apt-get install -y chromium-browser
            npm install docusaurus
            npx docusaurus start
 
