--- a/.github/workflows/generatePDF.yml
+++ b/.github/workflows/generatePDF.yml
@@ -32,6 +32,7 @@ jobs:
       env:
         CI: "true"
     - run: |
+           npm install docusaurus
            npm run docusaurus build
            npm run docusaurus serve
 
