--- a/.github/workflows/generatePDF.yml
+++ b/.github/workflows/generatePDF.yml
@@ -1,4 +1,5 @@
-name: Generate PDF
+# Uses a derivative of https://github.com/vaggeliskls/docusaurus-to-pdf?tab=readme-ov-file#example-workflow
+name: "Generate PDF from Docusaurus"
 
 on:
   push:
@@ -9,46 +10,26 @@ on:
     branches:
       - master
       - main
+
 jobs:
-  build:
+  generate-pdf:
     runs-on: ubuntu-latest
-    env:
-      PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
-      CI: 'true'
-    strategy:
-      matrix:
-        node-version: [18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/previous-releases
     steps:
-    - uses: actions/checkout@v2
-    - run: |
-           sudo apt-get update
-           sudo apt-get install -y chromium-browser
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-    - uses: mujo-code/puppeteer-headful@18.9.0
-      env:
-        CI: "true"
-    - run: |
-           npm install docusaurus
-           npm run docusaurus build
-           npm run docusaurus serve
+      - name: Sleep for 180 seconds
+        run: sleep 180s
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-    - name: Sleep for 30 seconds
-      run: sleep 30s
-
-    - name: Run Docusaurus to PDF Action
-      uses: vaggeliskls/docusaurus-to-pdf@v1
-      with:
-          DOCS_URL: "http://localhost:3000/docs/"
+      - name: Run Docusaurus to PDF Action
+        uses: vaggeliskls/docusaurus-to-pdf@v1
+        with:
+          DOCS_URL: "https://www.oramainteractive.com/Pixelorama-Docs"
           OUTPUT_PDF_FILENAME: "Pixelorama-Docs.pdf"
           COVER_TITLE: "Pixelorama Documentation"
           EXTRA_ARGS: --coverImage="https://www.oramainteractive.com/Pixelorama-Docs/img/favicon.ico" --pdfMargin="10,20,30,40" --paperFormat="A4"
 
-    - name: Upload PDF Artifact
-      uses: actions/upload-artifact@v4
-      with:
+      - name: Upload PDF Artifact
+        uses: actions/upload-artifact@v4
+        with:
           name: Pixelorama Documentation
           path: "./Pixelorama-Docs.pdf"
