--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "docusaurus-lunr-search": "^3.6.0",
     "prism-react-renderer": "^2.1.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-lite-youtube-embed": "^2.5.6"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.9.1",
