--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@mdx-js/react": "^3.0.0",
     "clsx": "^1.2.1",
     "docusaurus-lunr-search": "^3.6.0",
+    "framer-motion": "^12.23.22",
     "prism-react-renderer": "^2.1.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-lite-youtube-embed": "^2.5.6"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.9.1",
